--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,7 @@ label {
   margin: 0.05in;
 }
 
-#percentbutton {
+#percentbutton, #averagebutton {
   width: = 340px;
   height: 40px;
   margin: 0.1in;
